Added original dynamic functionality

--- a/src/gay.html
+++ b/src/gay.html
@@ -9,24 +9,51 @@
     <form>
       <fieldset>
         <legend>General</legend>
+        <label>Background</label>
+        <input type="text" name="bg"></input>
         <label>Header 1</label>
         <input type="text" name="h1"></input>
         <label>Header 2</label>
         <input type="text" name="h2"></input>
-        <label>Background</label>
-        <input type="text" name="bg"></input>
+        <label>Icon colour</label>
+        <input type="text" name="icon"></input>
+        <label>Icon BG</label>
+        <input type="text" name="h_butt_bg"></input>
+        <label>Active tab</label>
+        <input type="text" name="tab"></input>
+        <label>Section link</label>
+        <input type="text" name="link"></input>
+      </fieldset>
+      <fieldset>
+        <legend>Home</legend>
+        <label>Lesson changed alert</label>
+        <input type="text" name="home_changed"></input>
+        <label>Lesson changed number</label>
+        <input type="text" name="home_changed_nr"></input>
+        <label>Lesson cancelled alert</label>
+        <input type="text" name="home_x"></input>
+        <label>Lesson cancelled number</label>
+        <input type="text" name="home_x_nr"></input>
+        <label>Last grade</label>
+        <input type="text" name="home_g"></input>
       </fieldset>
       <fieldset>
         <legend>Sidebar</legend>
-        <label>Sidebar Primary</label>
+        <label>Primary</label>
         <input type="text" name="sbar"></input>
-        <label>Sidebar Secondary</label>
+        <label>Secondary</label>
         <input type="text" name="sbar2"></input>
-        <label>Sidebar Primary buttons</label>
-        <input type="text" name="sbar_butt"></input>
-        <label>Sidebar Collapse Button</label>
+        <label>Button background</label>
+        <input type="text" name="sbar_butt_bg"></input>
+        <label>Collapse button</label>
         <input type="text" name="sbar_col"></input>
       </fieldset>
+      <fieldset>
+        <legend>Agenda</legend>
+        <label>Test/Homework notification</label>
+        <input type="text" name="agenda_notif"></input>
+      </fieldset>
+      <br>
       <input type="submit">
     </form>
   </body>
