--- a/src/gay.html
+++ b/src/gay.html
@@ -25,6 +25,17 @@
         <input type="text" name="link"></input>
       </fieldset>
       <fieldset>
+        <legend>Login</legend>
+        <label>Magister text</label>
+        <input type="text" name="login_logo"></input>
+        <label>Magister dot</label>
+        <input type="text" name="login_dot"></input>
+        <label>Login button text</label>
+        <input type="text" name="login_butt"></input>
+        <label>Login button background</label>
+        <input type="text" name="login_butt_bg"></input>
+      </fieldset>
+      <fieldset>
         <legend>Home</legend>
         <label>Lesson changed alert</label>
         <input type="text" name="home_changed"></input>
