added login icons

--- a/src/gay.html
+++ b/src/gay.html
@@ -28,6 +28,8 @@
         <input type="text" name="login_logo"></input>
         <label>Magister dot</label>
         <input type="text" name="login_dot"></input>
+        <label>Login icons</label>
+        <input type="text" name="login_icons"></input>
         <label>Login button text</label>
         <input type="text" name="login_butt"></input>
         <label>Login button background</label>
